feat(fuel-ingestor): ✨ add configuration and scheduling for data ingestion
* Introduced `IngestorProps` class for managing configuration properties.
* Implemented `FuelApiClient` for fetching data from external API.
* Created `IngestJob` class to schedule data fetching based on cron expression.
* Updated `.gitignore` to exclude VS Code settings.
* Enhanced `application.yml` to include server port configuration.

--- a/apps/fuel-ingestor/src/main/resources/application.yml
+++ b/apps/fuel-ingestor/src/main/resources/application.yml
@@ -23,6 +23,9 @@ management:
   endpoints.web.exposure.include: health,info,metrics,prometheus
   server.port: ${MANAGEMENT_PORT:8081}
 
+server:
+  port: ${SERVER_PORT:8081}
+
 ingestor:
   source:
     base-url: ${SOURCE_BASE_URL:https://sedeaplicaciones.minetur.gob.es/ServiciosRESTCarburantes/PreciosCarburantes/EstacionesTerrestres/}
