--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,34 @@
-version: "3.8"
-
 services:
   kafka:
     image: bitnami/kafka:3.7
+    container_name: kafka
     ports:
-      - "9092:9092" # Clientes desde tu host: PLAINTEXT://localhost:9092
+      - "9092:9092"   # internal listener (containers use kafka:9092)
+      - "9094:9094"   # host listener (IDE uses localhost:9094)
     environment:
       KAFKA_ENABLE_KRAFT: "yes"
       KAFKA_CFG_NODE_ID: "1"
       KAFKA_CFG_PROCESS_ROLES: "broker,controller"
 
-      # Listeners
-      KAFKA_CFG_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
-      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
-      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
+      # listeners: internal, host, controller
+      KAFKA_CFG_LISTENERS: "PLAINTEXT://:9092,PLAINTEXTHOST://:9094,CONTROLLER://:9093"
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: "PLAINTEXT:PLAINTEXT,PLAINTEXTHOST:PLAINTEXT,CONTROLLER:PLAINTEXT"
       KAFKA_CFG_INTER_BROKER_LISTENER_NAME: "PLAINTEXT"
+      KAFKA_CFG_CONTROLLER_LISTENER_NAMES: "CONTROLLER"
 
-      # Importante: que otros contenedores vean 'kafka:9092'
-      KAFKA_CFG_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092"
+      # advertised addresses for each listener
+      KAFKA_CFG_ADVERTISED_LISTENERS: "PLAINTEXT://kafka:9092,PLAINTEXTHOST://localhost:9094"
 
-      # Quórum KRaft (single node)
+      # single-node kraft quorum
       KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "1@kafka:9093"
 
-      # Factores de replicación mínimos para single-node
+      # single-replica factors (dev)
       KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
       KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: "1"
       KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: "1"
+
+      # lighter heap for dev
+      KAFKA_HEAP_OPTS: "-Xms512m -Xmx512m"
     volumes:
       - kafka-data:/bitnami/kafka
     healthcheck:
@@ -43,7 +46,7 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
     ports:
-      - "8080:8080" # http://localhost:8080
+      - "8080:8080"
 
   topic-init:
     image: bitnami/kafka:3.7
@@ -51,10 +54,15 @@ services:
       kafka:
         condition: service_healthy
     entrypoint: ["/bin/bash","-lc"]
+    # single-line; no $((..)) arithmetic; no line breaks (Windows-safe)
     command: >
-      kafka-topics.sh --create --if-not-exists --bootstrap-server kafka:9092 --topic prices.raw &&
-      kafka-topics.sh --create --if-not-exists --bootstrap-server kafka:9092 --topic stations.raw &&
-      kafka-topics.sh --create --if-not-exists --bootstrap-server kafka:9092 --topic prices.dlq
+      set -e;
+      kafka-topics.sh --bootstrap-server kafka:9092 --create --if-not-exists
+      --topic stations.raw --partitions 3 --config cleanup.policy=compact --config min.cleanable.dirty.ratio=0.1 &&
+      kafka-topics.sh --bootstrap-server kafka:9092 --create --if-not-exists
+      --topic prices.raw --partitions 6 --config cleanup.policy=delete --config retention.ms=1209600000 &&
+      kafka-topics.sh --bootstrap-server kafka:9092 --create --if-not-exists
+      --topic prices.dlq --partitions 3 --config retention.ms=2592000000
     restart: "no"
 
 volumes:
