--- a/apps/market-sinker/src/main/resources/application.yml
+++ b/apps/market-sinker/src/main/resources/application.yml
@@ -13,7 +13,8 @@ spring:
     bootstrap-servers: ${KAFKA_BOOTSTRAP:localhost:9092}
     consumer:
       group-id: ${KAFKA_GROUP_ID:market-sinker}
-      auto-offset-reset: latest
+      auto-offset-reset: earliest
+      enable-auto-commit: false
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
