fix(market-sinker): 🔧 update `KAFKA_GROUP_ID` for reprocessing
* Changed `KAFKA_GROUP_ID` from `market-sinker` to `market-sinker-reprocess` to reflect the new processing strategy.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,7 @@ services:
       SPRING_DATASOURCE_USERNAME: fuel
       SPRING_DATASOURCE_PASSWORD: fuel
       KAFKA_BOOTSTRAP: kafka:9092
-      KAFKA_GROUP_ID: market-sinker
+      KAFKA_GROUP_ID: market-sinker-reprocess
       KAFKA_PRICES_TOPIC: prices.raw
       KAFKA_STATIONS_TOPIC: stations.raw
       LOG_LEVEL: INFO
